@@ -3,6 +3,9 @@
 	* bdfread.pas:
 	fix code for isolated characters (closes bug #25402)
 
+	* avtfilechooser.c (get_file):
+	from root directory do back to main menu
+
 2009-01-22  Andreas K. Foerster  <info@akfoerster.de>
 
 	* avtfilechooser.c (get_file):
